# Qwizer

./: README.md  SwaggerToPDF.html  package-lock.json
.docker/: README.md  docker-compose.yml
.docker/back/: Dockerfile
.docker/front/: .dockerignore  Dockerfile
.docker/nginx/: generate.sh  nginx.conf
.docker/nginx/ssl/: myCA.pem  site.crt  site.key
examples/: grades.csv  questions.xml  questions.yml  questions2.yml  test1.yml  test2.yml  test3.yml
qwizer_be/: .env  .env.sample  .gitignore  Dockerfile  Pipfile  manage.py  poetry.toml  pyproject.toml  requirements.txt  start.sh  startup.py
qwizer_be/api/: admin.py  manager.py  models.py  serializer.py  urls.py  views.py
qwizer_be/api/migrations/: 0001_initial.py  0002_alter_perteneceacuestionario_idpregunta.py  0002_alter_pregunta_unique_together.py  0002_alter_user_role.py  0002_preguntacuestionario_aleatorizar.py  0003_cuestionarios_preguntas.py  0003_intento_hash_offline_and_more.py  0004_alter_preguntatest_respuesta.py  0004_preguntas_opciones.py  0005_alter_respuestasenviadastest_options_and_more.py
qwizer_be/api/tests/: __init__.py  test_api.py  test_qr.py  test_question.py  test_subject.py  test_test.py
qwizer_be/api/tests/examples/: users.csv
qwizer_be/api/utils/: cifrado.py
qwizer_be/api/views/: qr.py  question.py  student.py  subject.py  test.py  user.py
qwizer_be/api/viewss/: tests_views.py
qwizer_be/qwizer_be/: asgi.py  settings.py  urls.py  wsgi.py
qwizer_fe/: .env.sample  .eslintrc.json  .prettierrc  Dockerfile  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
qwizer_fe/public/: index.html  sw.js
qwizer_fe/src/: App.js  App.jsx  client.js  constants.js  index.js  index.jsx  service-worker.js
(+90 files in other folders)
