[tool.poetry]
name = "qwizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "^4.1.7"
django-cors-headers = "^3.14.0"
django-createuser = "^0.1.0"
djangorestframework = "^3.14.0"
pycryptodome = "^3.17"
pyyaml = "^6.0"
mysqlclient = "^2.1.1"
django-extensions = "^3.2.1"
djoser = "^2.1.0"
pip = "^23.0.1"
install = "^1.3.5"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"
werkzeug = "^2.2.3"
pylint = "^2.17.0"
pylint-django = "^2.5.3"
ipython = "^8.11.0"
black = "^23.1.0"
django-import-export = "^3.1.0"
gunicorn = "^20.1.0"
coverage = "^7.2.1"
drf-spectacular = { extras = ["sidecar"], version = "^0.26.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

[tool.pylint.main]
load-plugins = "pylint_django, pylint_django.checkers.migrations"
jobs = 0
persistent = "no"

[tool.pylint.basic]
good-names = ["i", "j", "k", "_", "pk", "x", "y", "me"]

[tool.pylint.pylint_django]
django-settings-module = "qwizer_be.settings"

[tool.pylint.format]
max-line-length = 180

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
    "bare-except",
    "arguments-differ",
]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO"]
